feat/detail-page-ssg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: 'Sawarabi Gothic', sans-serif;
   font-size: 16px;
-  color: #38444f;
+  color: #153c42;
 }
 
 a {
